syntax = "proto3";

package greeter;

option go_package = "internal/greeter;greeterpb";

service Greeter {
    // Unary RPC: SayHello returns a greeting message.
    rpc SayHello(HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}